fixed library animation for desktop view. now working on mobile view.

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -73,7 +73,6 @@
 }
 
 .library-active {
-    transform: translateX(10%);
     opacity:1;
 }
 
